--- a/lib/generators/surveyor/templates/config/locales/surveyor_en.yml
+++ b/lib/generators/surveyor/templates/config/locales/surveyor_en.yml
@@ -14,6 +14,7 @@ en:
     click_here_to_finish: "Click here to finish"
     previous_section: "&laquo; Previous section"
     next_section: "Next section &raquo;"
+    save_section: "Save section"
     select_one: "Select one ..."
     sections: "Sections"
     language: "Language"
