mandatory questions now work and provided better formatting to mandatory error msg

--- a/lib/generators/surveyor/templates/config/locales/surveyor_en.yml
+++ b/lib/generators/surveyor/templates/config/locales/surveyor_en.yml
@@ -18,3 +18,4 @@ en:
     select_one: "Select one ..."
     sections: "Sections"
     language: "Language"
+    mandatory_error_msg: "You must complete all required fields before submitting the survey.  Please fill in the following:"
